# soliplex

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  MANIFEST.in  PRIVACY.md  README.md  docker-compose.yaml  mkdocs.yml  pyproject.toml
.github/workflows/: deploy-site.yml  flutter-test.yml  pypi.yaml  python-lint.yaml  python-test.yaml  soliplex.yaml
docs/: adr-001-generative-ui.md  client.md  docker.md  index.md  log-ingestion.md  overview.md  prerequisites.md  rag.md  server.md  usage.md
docs/config/: agents.md  agui.md  completions.md  dburis.md  environment.md  filesystem_layout.md  installation.md  logfire.md  logging.md  meta.md  quizzes.md  rag.md  rooms.md  secrets.md  skills.md
docs/examples/room-thread-analysis/: README.md  model.md
docs/server/: cli.md  environment.md  index.md  sse_resume.md
example/: functest_no_llm.yaml  functest_w_gemini.yaml  haiku.rag.yaml  installation-openai.yaml  installation.yaml  logging.yaml  minimal-openai.yaml  minimal.yaml
example/completions/chat-bot/: completion_config.yaml
example/rooms/agent_swarm/: room_config.yaml
example/rooms/analysis/: room_config.yaml
example/rooms/ask_soliplex/: haiku.rag.yaml  room_config.yaml
example/rooms/bwrap_sandbox/: prompt.txt  room_config.yaml
example/rooms/chat/: room_config.yaml
example/rooms/demo/: prompt.txt  room_config.yaml
example/rooms/faux/: room_config.yaml
example/rooms/feedback/: room_config.yaml
example/rooms/genui/: prompt.txt  room_config.yaml
example/rooms/haiku/: haiku.rag.yaml  prompt.txt  room_config.yaml
example/rooms/mcptest/: prompt.txt  room_config.yaml
example/rooms/multi_arg/: room_config.yaml
example/rooms/quiztest/: room_config.yaml
example/rooms/research/: haiku.rag.yaml  prompt.txt  room_config.yaml
example/rooms/search/: room_config.yaml
example/rooms/skillstest/: room_config.yaml
example/rooms/title_only/: room_config.yaml
sandbox/environments/: README.md
schemas/: README.md  ask_history.json  filter_documents.json  schema.json
scripts/: generate_dart_models.sh  generate_feature_schemas.sh
src/agui_chat_rfw/: GENUI-RFW.md  PROJECT.md  pubspec.yaml
src/agui_chat_rfw/lib/: main.dart
src/agui_chat_rfw/test/: widget_test.dart
src/agui_chat_rfw/web/: index.html
src/agui_dash_2/: CLAUDE.md  DESIGN.md  LESSONS.md  PROJECT.md  QUICK_AGUI.md  README.md  pubspec.yaml
src/agui_dash_2/lib/: main.dart
src/agui_dash_2/linux/: CMakeLists.txt
src/agui_dash_2/test/: widget_test.dart
src/agui_dash_2/web/: manifest.json
src/agui_dash_2/windows/: CMakeLists.txt
src/flutter/: .gitignore  APP_FEATURES.md  CLAUDE.md  GEMINI.md  GEMINI_UNDERSTANDING.md  IMPLEMENTATION_STREAMING_MARKDOWN.md  LESSONS.md  README.md  SOLIPLEX.md  analysis_options.yaml  docker-compose.yml  nginx.conf  pubspec.yaml
src/flutter/GEMINI_OVERVIEW/: index.html
src/flutter/docs/: AUTH_FLOWS.md
src/flutter/lib/: agui_provider.dart  app_shell.dart  configure.dart  main.dart  oidc_auth_interactor.dart  shared.dart  soliplex_client.dart
src/flutter/linux/: CMakeLists.txt
src/flutter/scripts/: check_coverage.sh  smoke_test.py
src/flutter/test/: widget_test.dart
src/flutter/web/: index.html  manifest.json
src/flutter/windows/: CMakeLists.txt
src/soliplex/: agents.py  agui.py  aguix.py  auth.py  authn.py  cli.py  completions.py  config.py  convos.py  examples.py  haiku_chat.py  installation.py  log_ingest.py  loggers.py  logwrapper.py  main.py  mcp_auth.py  mcp_client.py  mcp_server.py  models.py  ollama.py  quizzes.py  secrets.py  titles.py  tools.py  util.py
src/soliplex/agui/: __init__.py  features.py  mpx.py  parser.py  persistence.py  schema.py  thread.py  util.py
src/soliplex/authz/: __init__.py  persistence.py  schema.py
src/soliplex/cli/: admin_users.py  audit.py  cli_util.py  main.py  ollama.py  room_authz.py  serve.py  types.py
src/soliplex/config/: __init__.py  _utils.py  agents.py  agui.py  authsystem.py  completions.py  exceptions.py  installation.py  logfire.py  meta.py  quizzes.py  rag.py  rooms.py  routing.py  secrets.py  skills.py  tools.py
src/soliplex/tools/: __init__.py  agui_run_feedback.py  file_uploads.py  genui.py  rag.py
src/soliplex/tui/: cli.py  main.py  rest_api.py  serve.py
src/soliplex/views/: __init__.py  agui.py  auth.py  authn.py  authz.py  completions.py  convos.py  feedback.py  file_uploads.py  installation.py  log_ingest.py  quizzes.py  rooms.py  streaming.py
tests/functional/: conftest.py  test_agent_tool_calling.py  test_agui_thread.py  test_functional.py  test_gemini_integration.py
tests/unit/: _test_features.py  conftest.py  test_agents.py  test_agui.py  test_aguix.py  test_authn.py  test_completions.py  test_config.py  test_convos.py  test_haiku_chat.py  test_installation.py  test_log_ingest.py  test_loggers.py  test_logwrapper.py  test_main.py  test_mcp_auth.py  test_mcp_server.py  test_models.py  test_ollama.py  test_quizzes.py  test_secrets.py  test_titles.py  test_tools.py  test_util.py
tests/unit/agui/: agui_constants.py  conftest.py  test___init__.py  test_agui_package.py  test_agui_parser.py  test_agui_persistence.py  test_agui_schema.py  test_agui_util.py  test_mpx.py  test_parser.py  test_persistence.py  test_thread.py
tests/unit/authz/: conftest.py  test_authz_package.py  test_authz_persistence.py  test_authz_schema.py  test_schema.py
tests/unit/cli/: test_cli_audit.py  test_cli_util.py
tests/unit/config/: conftest.py  test_config__utils.py  test_config_agents.py  test_config_agui.py  test_config_authsystem.py  test_config_completions.py  test_config_installation.py  test_config_logfire.py  test_config_meta.py  test_config_quizzes.py  test_config_rag.py  test_config_rooms.py  test_config_routing.py  test_config_secrets.py  test_config_skills.py  test_config_tools.py
tests/unit/fixtures/: cacert.pem
tests/unit/skills/: test_bwrap_sandbox.py
tests/unit/tools/: test_agui_run_feedback.py  test_file_uploads_tools.py  test_genui.py  test_rag_tools.py  test_tools_package.py
tests/unit/views/: test_agui_views.py  (+14 more)
(+352 files in other folders)
