[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "soliplex"
version = "0.59dev0"
description = "An AI-powered Retrieval-Augmented Generation (RAG) system with a modern web interface."
authors = [{ name = "Enfold", email = "info@enfoldsystems.net" }]
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "ag-ui-protocol >= 0.1.10",
    "aiosqlite",
    "authlib",
    "fastapi",
    "fastmcp >= 2.14.0, < 2.15",
    "greenlet",
    "haiku.rag-slim >= 0.36.3, < 0.37",
    "haiku-skills >= 0.13.0, < 0.14",
    "itsdangerous",
    "jsonpatch",
    "jwcrypto",
    "logfire[fastapi]",
    "pydantic-ai-slim[google]",
    "pyjwt",
    "python-keycloak",
    "sqlmodel",
    "starlette",
    "trio",
    "uvicorn[standard]",
    "certifi >= 2025.11.12",
]

[project.scripts]
soliplex-cli = "soliplex.cli:the_cli"
soliplex-tui = "soliplex.tui.cli:the_cli"
soliplex-tui-serve = "soliplex.tui.serve:main"

[dependency-groups]
dev = [
    "anyio >= 4.12.1, < 4.13",
    "coverage >= 7.13.5, < 7.14",
    "pytest >= 9.0.2, < 9.1",
    "pytest-cov >= 7.0.0, < 7.1",
    "pytest-asyncio >= 1.3.0, < 1.4",
    "ruff >= 0.15.6, < 0.16",
    "skills-ref",
    "trio >= 0.33.0, < 0.34",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.19",
    # See https://github.com/mkdocs/mkdocs/issues/4032
    "click != 8.2.2, != 8.3.0",
]
postgres = [
    "psycopg[binary]",  # synchronous access
    "asyncpg",          # async access
]
tui = [
    "textual",
    "textual-serve",
    "textual-fspicker",
    "typer",
]

[tool.pytest.ini_options]
pythonpath = "."
python_files = "test_*.py"
# skip 'tests/functional' by default
testpaths = ["tests/unit"]
addopts = "--cov=soliplex --cov=tests/unit --cov-branch --cov-fail-under=100"
filterwarnings = [
    # "ignore::DeprecationWarning:<source-package>",
]
markers = [
    "needs_llm: functest requiring an LLM",
]

[tool.coverage.run]
omit = [
    "src/soliplex/cli.py",
    "src/soliplex/examples.py",
    "src/soliplex/tui.py",
]

[tool.coverage.report]
show_missing = true

[tool.ruff]
line-length = 79
exclude = [
]
target-version = "py313"

[tool.ruff.lint]
select = [
    # flake8
    "F",
    # pycodestyle
    "E",
    # flake8-bugbear
    "B",
    # pyupgrade
    "U",
    # isort
    "I",
    # pandas vet
    "PD",
    # tryceratops
    "TRY",
    # flake8-pytest-style
    "PT",
]
ignore = [
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.flake8-pytest-style]
parametrize-names-type = "csv"
